--- a/week3/homework1,2,3,4.ipynb
+++ b/week3/homework1,2,3,4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69a1684c",
+   "id": "6a8f3ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1b6014b8",
+   "id": "616254e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9617c0cb",
+   "id": "805f0857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "27d3b6c6",
+   "id": "f28aadba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "37d3cac5",
+   "id": "50f5089e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "62ea1fe7",
+   "id": "65943477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1c2cf772",
+   "id": "252da803",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cf8b8a3d",
+   "id": "0f46526f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ae45e3bf",
+   "id": "54a403b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e7a65621",
+   "id": "cbb5c492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1dc6ad33",
+   "id": "9898338d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "311dbe18",
+   "id": "f54b1228",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0b374f62",
+   "id": "356d4cf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2629bb6f",
+   "id": "fd72c08f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f1b2bfe5",
+   "id": "6fe47cb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f406081",
+   "id": "a50c9191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f5ba22df",
+   "id": "9f5258d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,12 +371,17 @@
     "    test(\"1+2\")\n",
     "    test(\"1.0+2.1-3\")\n",
     "    \n",
-    "    #test case for inputting a single number\n",
+    "    #test cases for inputting a single number\n",
     "    test (\"123.456789\")\n",
+    "    test (\"-5.2\")\n",
     "    \n",
-    "    # test case for addition\n",
+    "    #test cases for addition\n",
     "    test (\"1.1+1.9\")\n",
     "    test (\"1234.5+67.89\")\n",
+    "    \n",
+    "    #test cases for using negative numbers\n",
+    "    test (\"1+-5\")\n",
+    "    test (\"-2+4\")\n",
     "    \n",
     "    #test cases for subtraction\n",
     "    test (\"1.5-1.0\")\n",
@@ -419,11 +424,14 @@
     "    test (\"(4-2)/(4*4)\")\n",
     "    test (\"(4/2)+(2-5)\")\n",
     "    \n",
+    "    #test cases for the use of more pairs of parenthesis than necessary\n",
+    "    test (\"(((((-5+2)))))\")\n",
+    "    \n",
     "    print()\n",
     "    print(\"==== Test cases for homework 4\")\n",
     "    print()\n",
     "    \n",
-    "    #using each function only\n",
+    "    #test cases for using each function only\n",
     "    test (\"abs(-1.4)\")\n",
     "    test (\"abs(2.5)\")\n",
     "    test (\"int(1.2345)\")\n",
@@ -431,12 +439,12 @@
     "    test (\"round(1.4999999)\")\n",
     "    test (\"round(1.5000000)\")\n",
     "    \n",
-    "    #repeating each function\n",
+    "    #test cases for repeating each function\n",
     "    test (\"abs(abs(3.4))\")\n",
     "    test (\"int(int(2.3))\")\n",
     "    test (\"round(round(1.5))\")\n",
     "    \n",
-    "    #combining all three functions\n",
+    "    #test cases for combining all three functions\n",
     "    test (\"abs(int(2.5))\")\n",
     "    test (\"int(abs(-8.3))\")\n",
     "    test (\"int(round(2.4))\")\n",
@@ -445,7 +453,7 @@
     "    test (\"abs(round(24.2))\")\n",
     "    test (\"int(round(abs(-12.49)))\")\n",
     "    \n",
-    "    #combining all three functions with addition, subtraction, multiplication, and division\n",
+    "    #test cases for combining all three functions with addition, subtraction, multiplication, and division\n",
     "    test (\"12*abs(int(round(-1.55)+abs(int(-2.3+4))))\")\n",
     "    test (\"abs(round(2.49999+1.0)+int(abs(5*(3+5)*2))/abs(-5/2))\")\n",
     "    \n",
@@ -456,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "664f32dd",
+   "id": "dc311656",
    "metadata": {},
    "outputs": [
     {
@@ -469,8 +477,11 @@
       "PASS! (1+2 = 3.000000)\n",
       "PASS! (1.0+2.1-3 = 0.100000)\n",
       "PASS! (123.456789 = 123.456789)\n",
+      "PASS! (-5.2 = -5.200000)\n",
       "PASS! (1.1+1.9 = 3.000000)\n",
       "PASS! (1234.5+67.89 = 1302.390000)\n",
+      "PASS! (1+-5 = -4.000000)\n",
+      "PASS! (-2+4 = 2.000000)\n",
       "PASS! (1.5-1.0 = 0.500000)\n",
       "PASS! (0.5-3.4 = -2.900000)\n",
       "PASS! (1.5+2.0-1.4 = 2.100000)\n",
@@ -495,44 +506,20 @@
       "PASS! ((1+1)*(2+2) = 8.000000)\n",
       "PASS! ((4-2)/(4*4) = 0.125000)\n",
       "PASS! ((4/2)+(2-5) = -1.000000)\n",
-      "\n",
-      "==== Test cases for homework 4\n",
-      "\n",
-      "PASS! (abs(-1.4) = 1.400000)\n",
-      "PASS! (abs(2.5) = 2.500000)\n",
-      "PASS! (int(1.2345) = 1.000000)\n",
-      "PASS! (int(2) = 2.000000)\n",
-      "PASS! (round(1.4999999) = 1.000000)\n",
-      "PASS! (round(1.5000000) = 2.000000)\n",
-      "PASS! (abs(abs(3.4)) = 3.400000)\n",
-      "PASS! (int(int(2.3)) = 2.000000)\n",
-      "PASS! (round(round(1.5)) = 2.000000)\n",
-      "PASS! (abs(int(2.5)) = 2.000000)\n",
-      "PASS! (int(abs(-8.3)) = 8.000000)\n",
-      "PASS! (int(round(2.4)) = 2.000000)\n",
-      "PASS! (round(int(28.3)) = 28.000000)\n",
-      "PASS! (round(abs(5.6)) = 6.000000)\n",
-      "PASS! (abs(round(24.2)) = 24.000000)\n",
-      "PASS! (int(round(abs(-12.49))) = 12.000000)\n",
-      "PASS! (12*abs(int(round(-1.55)+abs(int(-2.3+4)))) = 12.000000)\n",
-      "PASS! (abs(round(2.49999+1.0)+int(abs(5*(3+5)*2))/abs(-5/2)) = 35.000000)\n",
-      "\n",
-      "==== Test finished! ====\n",
-      "\n",
-      "> "
+      "PASS! ((((((-5+2))))) = -3.000000)\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
+     "ename": "SyntaxError",
+     "evalue": "'(' was never closed (<string>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m> \u001b[39m\u001b[38;5;124m'\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m     line \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      6\u001b[0m     tokens \u001b[38;5;241m=\u001b[39m tokenize(line)\n\u001b[0;32m      7\u001b[0m     answer \u001b[38;5;241m=\u001b[39m evaluate(tokens)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[1;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[0;32m   1176\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[0;32m   1177\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   1178\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1179\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1180\u001b[0m )\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[0;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3505\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[0;32mIn[18], line 1\u001b[0m\n    run_test()\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[0;32mIn[17], line 68\u001b[0m in \u001b[0;35mrun_test\u001b[0m\n    test (\"(((((3+2))\")\u001b[0m\n",
+      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 5\u001b[1;36m in \u001b[1;35mtest\u001b[1;36m\n\u001b[1;33m    expected_answer = eval(line)\u001b[1;36m\n",
+      "\u001b[1;36m  File \u001b[1;32m<string>:1\u001b[1;36m\u001b[0m\n\u001b[1;33m    (((((3+2))\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m '(' was never closed\n"
      ]
     }
    ],
@@ -550,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9cd552",
+   "id": "77b4f14f",
    "metadata": {},
    "outputs": [],
    "source": []
