--- a/week3/homework1,2,3,4.ipynb
+++ b/week3/homework1,2,3,4.ipynb
@@ -506,20 +506,45 @@
       "PASS! ((1+1)*(2+2) = 8.000000)\n",
       "PASS! ((4-2)/(4*4) = 0.125000)\n",
       "PASS! ((4/2)+(2-5) = -1.000000)\n",
-      "PASS! ((((((-5+2))))) = -3.000000)\n"
+      "PASS! ((((((-5+2))))) = -3.000000)\n",
+      "\n",
+      "==== Test cases for homework 4\n",
+      "\n",
+      "PASS! (abs(-1.4) = 1.400000)\n",
+      "PASS! (abs(2.5) = 2.500000)\n",
+      "PASS! (int(1.2345) = 1.000000)\n",
+      "PASS! (int(2) = 2.000000)\n",
+      "PASS! (round(1.4999999) = 1.000000)\n",
+      "PASS! (round(1.5000000) = 2.000000)\n",
+      "PASS! (abs(abs(3.4)) = 3.400000)\n",
+      "PASS! (int(int(2.3)) = 2.000000)\n",
+      "PASS! (round(round(1.5)) = 2.000000)\n",
+      "PASS! (abs(int(2.5)) = 2.000000)\n",
+      "PASS! (int(abs(-8.3)) = 8.000000)\n",
+      "PASS! (int(round(2.4)) = 2.000000)\n",
+      "PASS! (round(int(28.3)) = 28.000000)\n",
+      "PASS! (round(abs(5.6)) = 6.000000)\n",
+      "PASS! (abs(round(24.2)) = 24.000000)\n",
+      "PASS! (int(round(abs(-12.49))) = 12.000000)\n",
+      "PASS! (12*abs(int(round(-1.55)+abs(int(-2.3+4)))) = 12.000000)\n",
+      "PASS! (abs(round(2.49999+1.0)+int(abs(5*(3+5)*2))/abs(-5/2)) = 35.000000)\n",
+      "\n",
+      "==== Test finished! ====\n",
+      "\n",
+      "> "
      ]
     },
     {
-     "ename": "SyntaxError",
-     "evalue": "'(' was never closed (<string>, line 1)",
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
      "output_type": "error",
      "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[0;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3505\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[0;32mIn[18], line 1\u001b[0m\n    run_test()\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[0;32mIn[17], line 68\u001b[0m in \u001b[0;35mrun_test\u001b[0m\n    test (\"(((((3+2))\")\u001b[0m\n",
-      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 5\u001b[1;36m in \u001b[1;35mtest\u001b[1;36m\n\u001b[1;33m    expected_answer = eval(line)\u001b[1;36m\n",
-      "\u001b[1;36m  File \u001b[1;32m<string>:1\u001b[1;36m\u001b[0m\n\u001b[1;33m    (((((3+2))\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m '(' was never closed\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m> \u001b[39m\u001b[38;5;124m'\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m     line \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      6\u001b[0m     tokens \u001b[38;5;241m=\u001b[39m tokenize(line)\n\u001b[0;32m      7\u001b[0m     answer \u001b[38;5;241m=\u001b[39m evaluate(tokens)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[1;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[0;32m   1176\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[0;32m   1177\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   1178\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1179\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1180\u001b[0m )\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
