--- a/week3/homework1,2,3,4.ipynb
+++ b/week3/homework1,2,3,4.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyStack:\n",
+    "# class that implements stack (LIFO) structure\n",
+    "class Stack:\n",
     "    def __init__(self):\n",
     "        self.stack = []\n",
     "    def push(self, item):\n",
@@ -200,10 +201,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# identify a sequence closed by parenthesis and call the calculate_next_sequence function to calculate the value of the sequence\n",
+    "# identify a sequence closed by parenthesis and call the calculate function to calculate the value of the sequence\n",
     "# it also calls check_functions function to apply the function if there is any\n",
+    "# token list will be updated\n",
     "def evaluate(tokens):\n",
-    "    stack = MyStack()\n",
+    "    stack = Stack()\n",
     "    answer = 0\n",
     "    index = 0\n",
     "    \n",
@@ -211,7 +213,18 @@
     "    tokens.append({'type': 'CLOSE'}) #dumy token\n",
     "    while index < len(tokens):\n",
     "        if (tokens[index]['type']=='CLOSE'):\n",
-    "            (answer, stack, tokens, index) = calculate_next_sequence(tokens, stack, index)\n",
+    "            previous_token = stack.pop()\n",
+    "            temp_tokens = []\n",
+    "            length = 2\n",
+    "            while (previous_token['type']!='OPEN'):\n",
+    "                temp_tokens.append(previous_token)\n",
+    "                previous_token = stack.pop()\n",
+    "                length += 1\n",
+    "            temp_tokens.reverse()\n",
+    "            \n",
+    "            (tokens, index) = delete_tokens(tokens, length, index)\n",
+    "    \n",
+    "            answer = calculate(temp_tokens)\n",
     "            if stack.length()!=0:\n",
     "                (answer, stack) = check_functions(stack, answer)\n",
     "                \n",
@@ -258,31 +271,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "356d4cf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a list of tokens in between parenthesis, call a function to calculate its value, and update the list of tokens and stack\n",
-    "def calculate_next_sequence(tokens, stack, index):\n",
-    "    previous_token = stack.pop()\n",
-    "    temp_tokens = []\n",
-    "    length = 2\n",
-    "    while (previous_token['type']!='OPEN'):\n",
-    "        temp_tokens.append(previous_token)\n",
-    "        previous_token = stack.pop()\n",
-    "        length += 1\n",
-    "    temp_tokens.reverse()\n",
-    "            \n",
-    "    (tokens, index) = delete_tokens(tokens, length, index)\n",
-    "    \n",
-    "    answer = calculate(temp_tokens)\n",
-    "    \n",
-    "    return answer, stack, tokens, index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "fd72c08f",
    "metadata": {},
    "outputs": [],
@@ -297,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "6fe47cb9",
    "metadata": {},
    "outputs": [],
@@ -338,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "a50c9191",
    "metadata": {},
    "outputs": [],
@@ -356,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "9f5258d9",
    "metadata": {},
    "outputs": [],
@@ -463,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "dc311656",
    "metadata": {},
    "outputs": [
@@ -541,7 +529,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m> \u001b[39m\u001b[38;5;124m'\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m     line \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      6\u001b[0m     tokens \u001b[38;5;241m=\u001b[39m tokenize(line)\n\u001b[0;32m      7\u001b[0m     answer \u001b[38;5;241m=\u001b[39m evaluate(tokens)\n",
+      "Cell \u001b[1;32mIn[17], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m> \u001b[39m\u001b[38;5;124m'\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m     line \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      6\u001b[0m     tokens \u001b[38;5;241m=\u001b[39m tokenize(line)\n\u001b[0;32m      7\u001b[0m     answer \u001b[38;5;241m=\u001b[39m evaluate(tokens)\n",
       "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[1;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[0;32m   1176\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[0;32m   1177\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   1178\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1179\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1180\u001b[0m )\n",
       "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
