improved the program based on the mentor's advice

--- a/week3/homework1,2,3,4.ipynb
+++ b/week3/homework1,2,3,4.ipynb
@@ -203,6 +203,7 @@
    "source": [
     "# identify a sequence closed by parenthesis and call the calculate function to calculate the value of the sequence\n",
     "# it also calls check_functions function to apply the function if there is any\n",
+    "# it returns the value of the whole sequence\n",
     "# token list will be updated\n",
     "def evaluate(tokens):\n",
     "    stack = Stack()\n",
@@ -244,6 +245,7 @@
    "outputs": [],
    "source": [
     "# check whether there is a function or not, and apply it if there is\n",
+    "# it returns the updated value of the answer and the stack\n",
     "def check_functions(stack, answer):\n",
     "    token = stack.peek()\n",
     "    if token['type']=='FUNCTION':\n",
@@ -290,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate a value of the given list of tokens\n",
+    "# calculate a value of the given list of tokens and returns it\n",
     "def calculate(tokens):\n",
     "    answer = 0\n",
     "    tokens.insert(0, {'type': 'PLUS'}) # Insert a dummy '+' token\n",
