fixed print error

--- a/week5/Homework.ipynb
+++ b/week5/Homework.ipynb
@@ -268,7 +268,7 @@
     "    tour, total_distance = greedy(cities)\n",
     "    tour, total_distance = noCross(cities, tour, total_distance)\n",
     "    start_time = time.time()\n",
-    "    time_limit = 100\n",
+    "    time_limit = 60\n",
     "    initial_distance = total_distance\n",
     "    while (time.time()-start_time<time_limit):\n",
     "        tour, total_distance = annealing(cities, tour, total_distance, initial_distance, start_time, time_limit)\n",
@@ -332,18 +332,18 @@
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "#     for i in range (7):\n",
-    "#         cities = readInput(i)\n",
-    "#         tour = solve(cities)\n",
-    "#         writeOutput(tour, i)\n",
-    "#         print(\"Finished \"+str(i)+\"th data!\")\n",
+    "    for i in range (7):\n",
+    "        cities = readInput(i)\n",
+    "        tour = solve(cities)\n",
+    "        writeOutput(tour, i)\n",
+    "        print(\"Finished \"+str(i)+\"th data!\")\n",
     "\n",
     "# When testing for one particular test case\n",
-    "    i = 6\n",
-    "    cities = readInput(i)\n",
-    "    tour = solve(cities)\n",
-    "    writeOutput(tour, i)\n",
-    "    print(\"Finished \"+str(i)+\"th data!\")"
+    "#     i = 6\n",
+    "#     cities = readInput(i)\n",
+    "#     tour = solve(cities)\n",
+    "#     writeOutput(tour, i)\n",
+    "#     print(\"Finished \"+str(i)+\"th data!\")"
    ]
   }
  ],
